fixing size of iframe and its container; it was covering 'Approve' button

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -81,10 +81,10 @@ footer {
   }
 
   #iframe-container{
-    height: 125%;
+    height: 103%;
     iframe {
       width: 100%; 
-      height: 80%;
+      height: 100%;
     }
   }
 }
